FISH-6280 Updates and removal/changes of some removed java options