@@ -65,13 +65,12 @@ if [[ "$JDK" == "JDK11" || "$JDK" == "jdk11" ]];then
      -Djavax.xml.accessExternalDTD=file,http"
 
 else
-  export ANT_OPTS="-Xmx2G -Djava.endorsed.dirs=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/modules/endorsed \
+  export ANT_OPTS="-Xmx2G \
                  -Djavax.xml.accessExternalStylesheet=all \
                  -Djavax.xml.accessExternalSchema=all \
 		 -DenableExternalEntityProcessing=true \
                  -Djavax.xml.accessExternalDTD=file,http"
-  export CTS_ANT_OPTS="-Djava.endorsed.dirs=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/modules/endorsed \
-                 -Djavax.xml.accessExternalStylesheet=all \
+  export CTS_ANT_OPTS="-Djavax.xml.accessExternalStylesheet=all \
                  -Djavax.xml.accessExternalSchema=all \
      -Djavax.xml.accessExternalDTD=file,http"
 
